<resources>
    <string name="app_name">C around</string>

    <!--
    Top meny
    -->
    <string name="menu_friends">Vänner</string>
    <string name="menu_change_distans">Ändra avstånd</string>
    <string name="menu_notification">Notifikation</string>
    <string name="menu_busy">Upptagen</string>
    <string name="menu_sing_out">Logga ut</string>

    <!--
    Loggin sida
    -->
    <string name="login_button_creat_user">Skapa konto</string>
    <string name="login_button_login">Logga in</string>
    <string name="login_button_info">Information</string>

    <!--
    Inget internet
    -->
    <string name="dialog_no_internet">Ett nätverksfel inträffade. Vänligen kontrollera anslutningen och försök igen.</string>
    <string name="dialog_no_internet_text1">Ett nätverksfel inträffade!</string>
    <string name="dialog_no_internet_text2">Vänligen kontrollera anslutningen och försök igen.</string>

    <!--
    Skapa konto sida
    -->
    <string name="creat_user_firstname">Namn</string>
    <string name="creat_user_lastname">Efternamn</string>
    <string name="creat_user_telnumber">Telefon nummer</string>
    <string name="creat_user_button_done">Klar</string>

    <!--
    Huvudsida sida
    -->
    <string name="panel_start_text_of_friends">0 vänner</string>
    <string name="panel_start_text_distans">0 m</string>
    <string name="panel_number_of_friends">vänner</string>
    <string name="panel_distans_m">m</string>
    <string name="panel_distans_km">km</string>
    <string name="panel_distans_mil">mil</string>
    <string name="panel_time">minuter sedan</string>



    <string name="button_busy">Upptagen</string>

    <!--
    Vyer när gps inte är godkänd eller på
    -->
    <string name="no_gps_text_header">Hittar inte gps!</string>
    <string name="no_gps_text_second_turn_on">Kontrollera att mobilens gps är på.</string>
    <string name="no_gps_button_turn_on">Starta gps</string>

    <string name="no_gps_text_second_granted">Du måste godkänna att gps användning för C around</string>
    <string name="no_gps_button_granted">Godkänd gps</string>

    <!--
    Vyer när det inte finns några vänner nära
    -->
    <string name="no_friend_text_header">Inga vänner i närheten!</string>
    <string name="no_friend_text_second_turn_on">Ändra ditt valda avståndet för att öka avsöknings området.\r\nDu måste ha vänner i din vänlista för att se dinna vänner.</string>
    <string name="no_friend_button_turn_on">Ändra avstånd</string>

    <!--
    Dialog klickad vän
    -->
    <string name="dilog_header">Kontakt</string>
    <string name="dilog_first_name">Förnamn</string>
    <string name="dilog_last_name">Efternmn</string>
    <string name="dilog_distans">Distans</string>
    <string name="dilog_distans_subtext">Distans från person</string>
    <string name="dilog_distans_subtext_part1"> befinner sig inom </string>
    <string name="dilog_distans_subtext_part2"> från dig.</string>

    <!--
    Notifickation
    -->
    <string name="notification_one_friend_close"> ny vän nära dig!</string>
    <string name="notification_multi_friend_close"> nya vänner nära dig!</string>

    <!--
    Ändra avstånd dialog ruta
    -->
    <string name="dia_change_distans_message">Ända avstånd</string>
    <string name="dia_distans_m">m</string>
    <string name="dia_distans_km">km</string>
    <string name="dia_distans_mil">mil</string>

    <!--
    Vänsida
    -->
    <string name="friend_list_message">Vän</string>
    <string name="friend_tab_fri">Vänner</string>
    <string name="friend_tab_friReq">Vänförfrågningar</string>

    <!--
    Vänrequestsida no allowed
    -->
    <string name="no_friend_allow_text_header">Inga vänner!</string>
    <string name="no_friend_allow_text_second">Du har inga vänner än.\r\nGör vänförfrågningar och godkänn vänförfrågningar för att få vänner.</string>

    <!--
    Vänrequestsida no request
    -->
    <string name="no_friend_req_text_header">Inga vänförfrågningar!</string>
    <string name="no_friend_req_text_second">Ingen har gjort vän förfrågan till dig.\r\nProva att göra egna förfrågningar till dina vänner.</string>

    <!--
    Vänsida dialog
    -->
    <string name="friend_dia_add_friend">Lägg till vänner</string>





</resources>
