<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_friends"
        android:title="@string/menu_friends"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_change_distans"
        android:title="@string/menu_change_distans"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_notification"
        android:title="@string/menu_notification"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_account"
        android:title="@string/menu_account"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_sing_out"
        android:title="@string/menu_sing_out"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

</menu>