<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.emmasoderstrom.caround2.CreateUser">

    <EditText
        android:id="@+id/creat_user_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/creat_user_firstname"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/creat_user_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/creat_user_lastname"
        android:layout_below="@+id/creat_user_firstname"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/creat_user_telnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/creat_user_telnumber"
        android:layout_below="@id/creat_user_lastname"/>

    <Button
        android:id="@+id/creat_user_done"
        android:onClick="creatUserDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creat_user_button_done"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
