<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"

tools:context="com.emmasoderstrom.caround2.MainActivity">

<include layout="@layout/toolbar"
    android:id="@+id/toolbar"/>

    <RelativeLayout
        android:id="@+id/top_text_continer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="#89bdbdbd">
        <!--android:background="#BDBDBD">-->



        <TextView
            android:id="@+id/text_number_of_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="56dp"
            android:text="@string/panel_start_text_of_friends"
            />
        <TextView
            android:id="@+id/text_distans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/panel_start_text_distans"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>


    <ListView
        android:id="@+id/list_close_friends"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_text_continer">
    </ListView>

    <RelativeLayout
        android:visibility="visible"
        android:id="@+id/no_friend_close"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/toolbar">

        <ImageView
            android:id="@+id/no_friend_close_image"
            android:src="@drawable/ic_group_black_100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/no_friend_close_text"/>

        <TextView
            android:id="@+id/no_friend_close_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/no_friend_text_header"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/no_friend_close_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/no_friend_text_second_turn_on"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_below="@+id/no_friend_close_text"/>

        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:text="@string/no_friend_button_turn_on"-->
            <!--android:onClick="onClickChangeDistans"/>-->

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_mode_edit_white_24dp"
            android:onClick="onClickChangeDistans"/>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="invisible"
        android:id="@+id/permission_not_granted"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/toolbar"
        android:background="@color/colorBackgrund">

        <ImageView
            android:id="@+id/permission_location_image"
            android:src="@drawable/ic_my_location_black_100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/permission_gps_text"/>

        <TextView
            android:id="@+id/permission_gps_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/no_gps_text_header"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/permission_gps_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/no_gps_text_second_granted"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_below="@+id/permission_gps_text"/>

        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:text="@string/no_gps_button_granted"-->
            <!--android:onClick="onClickGpsPermission"/>-->

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_done_white_24dp"
            android:onClick="onClickGpsPermission"/>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="invisible"
        android:id="@+id/gps_not_on"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/toolbar"
        android:background="@color/colorBackgrund">

        <ImageView
            android:id="@+id/gps_location_image"
            android:src="@drawable/ic_my_location_black_100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/gps_turn_on_text"/>

        <TextView
            android:id="@+id/gps_turn_on_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/no_gps_text_header"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/gps_turn_on_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/no_gps_text_second_turn_on"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_below="@+id/gps_turn_on_text"/>

        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:text="@string/no_gps_button_turn_on"-->
            <!--android:onClick="onClickGpsTurnOn"/>-->

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_place_white_24dp"
            android:onClick="onClickGpsTurnOn"/>

    </RelativeLayout>



<!--
<Button
    android:layout_width="wrap_content"
    android:layout_height="36dp"
    android:text="@string/button_busy"
    android:layout_alignParentBottom="true"/>
-->

    <RelativeLayout
        android:id="@+id/frien_list_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#ce0b0b">

    </RelativeLayout>

</RelativeLayout>
