<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_friend_handler"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emmasoderstrom.caround2.FriendHandler">

    <include
        layout="@layout/toolbartab"
        android:id="@+id/toolbar"
        />

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"></TabWidget>



            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab_friend_allowed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/friend_allowed_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:id="@+id/friend_if_no_allowed"
                            android:visibility="invisible"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="16dp">

                            <ImageView
                                android:id="@+id/friend_if_no_allowed_image"
                                android:src="@drawable/ic_group_black_100dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_above="@+id/friend_if_no_allowed_text"/>

                            <TextView
                                android:id="@+id/friend_if_no_allowed_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="24dp"
                                android:text="@string/no_friend_allow_text_header"
                                android:textSize="24sp"
                                android:gravity="center"
                                android:layout_centerVertical="true"
                                />

                            <TextView
                                android:id="@+id/friend_if_no_allowed_text2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/no_friend_allow_text_second"
                                android:textSize="12sp"
                                android:gravity="center"
                                android:layout_below="@+id/friend_if_no_allowed_text"/>


                        </RelativeLayout>

                        <!--<RelativeLayout-->
                            <!--android:id="@+id/friend_if_no_allowed"-->
                            <!--android:visibility="invisible"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="match_parent">-->
                            <!--<TextView-->
                                <!--android:layout_width="match_parent"-->
                                <!--android:layout_height="match_parent"-->
                                <!--android:gravity="center"-->
                                <!--android:layout_centerVertical="true"-->
                                <!--android:text="Inga vänner"-->
                                <!--android:textSize="40sp"/>-->
                        <!--</RelativeLayout>-->


                        <ListView
                            android:id="@+id/list_allowed_friends"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </ListView>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_friend_request"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/friend_reqest_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:id="@+id/friend_if_no_requests"
                            android:visibility="invisible"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="16dp">

                            <ImageView
                                android:id="@+id/friend_if_no_requests_image"
                                android:src="@drawable/ic_group_black_100dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_above="@+id/friend_if_no_requests_text"/>

                            <TextView
                                android:id="@+id/friend_if_no_requests_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="24dp"
                                android:text="@string/no_friend_req_text_header"
                                android:textSize="24sp"
                                android:gravity="center"
                                android:layout_centerVertical="true"
                                />

                            <TextView
                                android:id="@+id/friend_if_no_requests_text2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/no_friend_req_text_second"
                                android:textSize="12sp"
                                android:gravity="center"
                                android:layout_below="@+id/friend_if_no_requests_text"/>


                        </RelativeLayout>

                        <!--<RelativeLayout-->
                            <!--android:id="@+id/friend_if_no_requests"-->
                            <!--android:visibility="invisible"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="match_parent">-->

                            <!--<TextView-->
                                <!--android:layout_width="match_parent"-->
                                <!--android:layout_height="match_parent"-->
                                <!--android:gravity="center"-->
                                <!--android:layout_centerVertical="true"-->
                                <!--android:text="Inga vänförfrågningar"-->
                                <!--android:textSize="40sp"/>-->
                        <!--</RelativeLayout>-->


                        <ListView
                            android:id="@+id/list_request_friends"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                        </ListView>

                    </RelativeLayout>

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_add_white_24dp"
        android:onClick="addFriendRequest"/>



</RelativeLayout>
